--- a/itinerary/package.json
+++ b/itinerary/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "framer-motion": "^12.12.1",
+    "js-confetti": "^0.12.0",
     "lucide-react": "^0.511.0",
     "next": "14.2.26",
     "react": "^18",
