--- a/itinerary/package.json
+++ b/itinerary/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "framer-motion": "^12.12.1",
+    "html2pdf.js": "^0.10.3",
     "js-confetti": "^0.12.0",
     "lucide-react": "^0.511.0",
     "next": "14.2.26",
