--- a/itinerary/package.json
+++ b/itinerary/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "axios": "^1.11.0",
     "framer-motion": "^12.12.1",
     "html2pdf.js": "^0.10.3",
     "js-confetti": "^0.12.0",
