--- a/itinerary/package.json
+++ b/itinerary/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.12.1",
     "html2pdf.js": "^0.10.3",
     "js-confetti": "^0.12.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "next": "14.2.26",
     "react": "^18",
